# Diploma_project_back

./: .gitignore
library_top/: build.sh  pyproject.toml  requirements.txt
library_top/login/: forms.py  models.py  urls.py  views.py
library_top/login/migrations/: 0001_initial.py
library_top/login/templates/login/: login.html  registry.html
library_top/main/: admin.py  models.py  serializers.py  urls.py  views.py
library_top/main/migrations/: 0001_initial.py  0002_books_googl_id_alter_rentsbook_start_date.py  0003_alter_books_author.py  0004_alter_books_img_alter_rentsbook_start_date.py  0005_library_adddate_library_comment.py  0006_alter_rentsbook_start_date_userprofile.py  0007_alter_library_user_alter_rentsbook_start_date.py  0008_alter_rentsbook_start_date.py  0009_alter_rentsbook_start_date_message.py  0010_alter_message_owner_alter_message_rent_user.py  0011_message_sender_alter_message_rent_user_and_more.py  0012_rentsbook_book_alter_rentsbook_start_date.py  0013_alter_rentsbook_end_date.py  0014_alter_rentsbook_rent_user.py  0015_alter_rentsbook_end_date_alter_rentsbook_start_date.py
library_top/main/templates/main/: book_add.html  books_list.html  homepage.html
library_top/templates/base/: base.html
