[tool.poetry]
name = "library-top"
version = "0.1.0"
description = ""
authors = ["Lenkis1567 <chuvilinaelena.manager@gmail.com>"]
readme = "README.md"
packages = [{include = "library_top"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
